# slide-extractor

./: README.md  pyproject.toml  requirements.txt
slide_extractor/: main.py  youtube_extractor.py
