[project]
name = "slide-extractor"
version = "2.0.2"
description = "An easy tool to extract slides from presentations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.4",
    "numpy>=1.21.6",
    "opencv-python>=4.5.5.64",
    "pafy>=0.5.5",
    "pillow>=9.1.0",
    "tqdm>=4.64.0",
    "youtube-dl>=2021.12.17",
]
